# SCA

./: .gitignore  .pre-commit-config.yaml  README.md  configure.sh  precommit.sh  pyproject.toml  requirements.txt  template.py  test.ipynb  train_fly_ver.py  train_resume.py
.github/workflows/: ci-lint.yaml
.ipynb_checkpoints/: train-checkpoint.py  train-checkpoint.sh
configs/: train_config.yaml
configs/.ipynb_checkpoints/: ds_config-checkpoint.json
configs/accelerate/: 1gpu.yaml  memory_efficient_2gpus.yaml  memory_efficient_4gpus.yaml  memory_efficient_6gpus.yaml
configs/sca/: default.yaml  duplex.yaml
scripts/: check_p2p.py  load_lora.py  merge_final_ckpt.py  preload_dataset.py  preload_duplex_dataset.py  test_load_checkpoint.py  train.sh  train_duplex.sh
src/: __init__.py  dataset.py  utils.py
src/.ipynb_checkpoints/: template-checkpoint.py
src/sca_train/: __init__.py  data_collator.py  data_collator_duplex.py  data_types.py  logger.py  train.py  train_duplex.py  trainer.py  utils.py
src/sca_train/config/: __init__.py  config.py  config_duplex.py  loader.py  logger.py  lora.py  train.py
src/sca_train/modeling/: __init__.py  qwen3_omni_duplex.py  qwen3_omni_moe.py
tests/: __init__.py  mock_duplex_data.py  test_data_types.py  test_duplex_collator.py
wandb/: latest-run
wandb/run-20251228_142601-4smrjliz/: run-4smrjliz.wandb
wandb/run-20251228_142601-4smrjliz/files/: requirements.txt  wandb-metadata.json
wandb/run-20251228_144132-1698jojk/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251229_103417-73wvnkh3/: run-73wvnkh3.wandb
wandb/run-20251229_103417-73wvnkh3/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
