[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sca_train*"]

[project]
name = "sca_train"
version = "0.1.0"
description = "Training code for the SCA project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2 ; sys_platform == 'linux'",
    "datasets>=4.4.1",
    "hf-transfer>=0.1.9",
    "librosa==0.10.2",
    "numpy>=2.3.5",
    "peft>=0.18.0",
    "qwen-omni-utils>=0.0.8",
    "sca-data",
    "speechbrain>=1.0.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]

[project.optional-dependencies]
cpu = ["torch==2.9.1", "torchaudio==2.9.1", "torchvision==0.24.1"]
cu126 = [
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision>=0.24.1",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.5.4/flash_attn-2.8.3+cu126torch2.9-cp312-cp312-linux_x86_64.whl",
]
cu128 = [
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision>=0.24.1",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.5.4/flash_attn-2.8.3+cu128torch2.9-cp312-cp312-linux_x86_64.whl",
]
cu130 = [
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "torchvision>=0.24.1",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.5.4/flash_attn-2.8.3+cu130torch2.9-cp312-cp312-linux_x86_64.whl",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu126" }, { extra = "cu128" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-cu130", extra = "cu130" },
]
sca-data = { git = "https://github.com/riverfog7/sca_data_prep.git" }
speechbrain = { git = "https://github.com/speechbrain/speechbrain", rev = "264b642" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]
